# logos-execution-zone-wallet-ui

./: .gitignore  CMakeLists.txt  README.md  flake.nix  metadata.json
.github/workflows/: pr-review-board.yml
app/: CMakeLists.txt  main.cpp  mainwindow.cpp
nix/: app.nix  default.nix  lib.nix
src/: LEZAccountFilterModel.cpp  LEZAccountFilterModel.h  LEZClaimableAccountFilterModel.cpp  LEZClaimableAccountFilterModel.h  LEZWalletAccountModel.cpp  LEZWalletAccountModel.h  LEZWalletBackend.cpp  LEZWalletBackend.h  LEZWalletBackend.rep  LEZWalletPlugin.cpp  LEZWalletPlugin.h  LEZWalletPluginInterface.h  wallet_resources.qrc
src/qml/: Base58.js  ExecutionZoneWalletView.qml
src/qml/controls/: AccountComboBox.qml  AccountDelegate.qml  LogosCopyButton.qml
src/qml/popups/: CreateAccountDialog.qml
src/qml/views/: AccountsPanel.qml  BridgePanel.qml  ClaimDepositPanel.qml  DashboardView.qml  OnboardingView.qml  TransferPanel.qml  TransferTypesPanel.qml  WithdrawPanel.qml  qmldir
